Integrated with Xposed to hook Dex.getBytes()
Change-Id: Ie3f33839c1d390b97527355d330ab604afb20849

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -104,6 +104,16 @@
             android:defaultToDeviceProtectedStorage="true"
             android:directBootAware="true">
 
+	    <meta-data
+                android:name="xposedmodule"
+		android:value="true" />
+	    <meta-data
+                android:name="xposeddescription"
+		android:value="Settings" />
+	    <meta-data
+                android:name="xposedminversion"
+		android:value="54" />
+
         <!-- Settings -->
 
         <activity android:name="Settings"
