GetBytes with dex hook
Change-Id: I1a699d8f089b070cb9df9953d3e55a72e43239e9

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -109,7 +109,7 @@
 		android:value="true" />
 	    <meta-data
                 android:name="xposeddescription"
-		android:value="Settings" />
+		android:value="脱壳" />
 	    <meta-data
                 android:name="xposedminversion"
 		android:value="54" />
